--- a/index.html
+++ b/index.html
@@ -1,42 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Meta tags for search engines -->
-    <meta name="description" content="Love Running, Club for Runners in Dublin, Ireland. Urban running, trail running, Dublin docklands and Phoenix Park.">
-    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise.">
+    <meta
+      name="description"
+      content="Love Running, Club for Runners in Dublin, Ireland. Urban running, trail running, Dublin docklands and Phoenix Park."
+    />
+    <meta
+      name="keywords"
+      content="love running, run, running club, runners, Ireland, Dublin, sport, exercise."
+    />
     <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon-zip/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-zip/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-zip/favicon-16x16.png">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon-zip/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicon-zip/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicon-zip/favicon-16x16.png"
+    />
     <!-- Stylesheet -->
-     <link rel="stylesheet" href="assets/css/style.css">
-</head>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
 
-<body>
+  <body>
     <!-- Header -->
     <header>
-        <a href="index.html">
-            <h1 id="logo">Love Running</h1>
-        </a>
-
+      <a href="index.html">
+        <h1 id="logo">Love Running</h1>
+      </a>
+      <nav>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Gallery</a></li>
-            <li><a href="">Sign Up</a></li>
+          <li><a href="">Home</a></li>
+          <li><a href="">Gallery</a></li>
+          <li><a href="">Sign Up</a></li>
         </ul>
-
-    </header>    
+      </nav>
+    </header>
 
     <!-- Main Content -->
     <main>Main Content</main>
-    
 
     <!-- Footer -->
     <footer>Footer</footer>
-
-</body>
+  </body>
 </html>
