--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <!-- Meta tags for search engines -->
     <meta
       name="description"
-      content="Love Running, Club for Runners in Dublin, Ireland. Urban running, trail running, Dublin docklands and Phoenix Park."
+      content="Love Running, Club for Runners in Dublin, Ireland, urban running, trail running, Dublin docklands and Phoenix Park"
     />
     <meta
       name="keywords"
-      content="love running, run, running club, runners, Ireland, Dublin, sport, exercise."
+      content="love running, run, running club, runners, Ireland, Dublin, sport, exercises"
     />
     <!-- Title -->
     <title>Love Running</title>
