--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <a href="index.html">
         <h1 id="logo">Love Running</h1>
       </a>
-      <input type="checkbox" id="nav-toggle" name="nav-toggle">
+      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
       <label for="nav-toggle" class="nav-toggle-label">X</label>
       <nav>
         <ul id="menu">
@@ -57,6 +57,14 @@
     <main>Main Content</main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+      <ul>
+        <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+            aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+      </ul>
+    </footer>
+
+    <!-- Font awesome kit -->
+    <script src="https://kit.fontawesome.com/f4b12cb3d3.js" crossorigin="anonymous"></script>
   </body>
 </html>
